--- a/templates/macros.html
+++ b/templates/macros.html
@@ -2,3 +2,18 @@
 <input type="{{ type }}" name="{{ name }}" placeholder="{{ placeholder }}"
 class="{{ class }}">
 {% endmacro %}
+
+{% macro render_field(field) %}
+  {% if field.name != 'submit' %}
+  <dt>{{ field.label }}
+  {% endif %}
+  <dd>{{ field(**kwargs)|safe }}
+  {% if field.errors %}
+    <ul class=errors>
+    {% for error in field.errors %}
+      <li style="list-style: none; color:red;">{{ error }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+  </dd>
+{% endmacro %}
