--- a/templates/users.html
+++ b/templates/users.html
@@ -60,6 +60,9 @@ users Page
         <div class="mb-3">
           {{ render_field(form.age, user.age) }}
         </div>
+          <div class="mb-3">
+          {{ render_field(form.address, user.address) }}
+        </div>
           <div class="modal-footer">
         <input type="submit" class="btn btn-secondary" data-bs-dismiss="modal" value="Close"/>
         <input type="submit" class="btn btn-primary" value="Save changes"/>
