--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -16,7 +16,7 @@
 
         <div class="text-end">
           <button type="button" class="btn btn-outline-light me-2">Login</button>
-          <button type="button" class="btn btn-warning">Sign-up</button>
+          <button type="button" class="btn btn-warning"><a href="{{ url_for('register') }}">Sign-up</a></button>
         </div>
       </div>
     </div>
