added one-to-one relationship

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
   {% if messages %}
     <ul class=flashes>
     {% for category, message in messages %}
-      <li class="{{ category }}">{{ message }}</li>
+      <li class="{{ category }}" style="text-align:center;">{{ message }}</li>
     {% endfor %}
     </ul>
   {% endif %}
