--- a/templates/users.html
+++ b/templates/users.html
@@ -13,6 +13,7 @@ users Page
       <th scope="col">First Name</th>
       <th scope="col">Last Name</th>
       <th scope="col">Id Number</th>
+      <th scope="col">Roles</th>
       <th scope="col">Age</th>
       <th scope="col">User Posts</th>
       <th scope="col">Actions</th>
@@ -26,6 +27,7 @@ users Page
       <td>{{ user.first_name }} </td>
       <td>{{ user.last_name }}</td>
       <td>{{ user.id_card.id_number }}</td>
+      <td>{{ user.roles|join(', ') }}</td>
       <td>{{ user.age }}</td>
       <td><a href="{{ url_for('user_posts', user_id=user.id) }}" style="color: black">{{ user.posts|length }}</a></td>
 
