--- a/templates/posts.html
+++ b/templates/posts.html
@@ -6,7 +6,7 @@ User Posts Page
 
 {% block body %}
 
-<h1>Add Post</h1><a href="{{ url_for('create_post', user_id=user_id) }}"
+<h1>Add Post</h1><a href="{{ url_for('blog.create_post', user_id=user_id) }}"
 style="color: black; font-size: 25px;">+</a>
 
 
